UPPEND ASIDE & Albums design

--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Deezer Clone App - Enjoy Unlimited Music Streaming</title>
+    <meta
+      name="description"
+      content="Discover and stream unlimited music with our Deezer clone app. Access a vast library of songs, create personalized playlists, and enjoy a seamless listening experience on any device."
+    />
+    <meta
+      name="keywords"
+      content="Deezer clone, music streaming app, music app, online music player, personalized playlists, song library, music discovery, audio streaming, mobile app, music platform"
+    />
+    <meta name="author" content="Your Company Name" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.yourwebsite.com" />
+    <link href="./public/favicon.ico"  rel="icon" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
   </head>
   <body>
     <div id="app"></div>
