UPPEND CONTROLLER DESIGN & PLAY LIST

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Your Company Name" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.yourwebsite.com" />
-    <link href="./public/favicon.ico"  rel="icon" type="image/x-icon" />
+    <link href="./src/favicon.ico" rel="icon" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
